--- a/src/app/visualiser/style.module.scss
+++ b/src/app/visualiser/style.module.scss
@@ -48,7 +48,7 @@
         color: white;
         font-family: inherit;
         font-weight: bold;
-        background-color: #8431ff;
+        background-color: #7209b7;
         border: none;
         border-radius: 10px;
         padding: 0.5rem;
@@ -75,7 +75,7 @@
     background-color: #ff758f;
 
     .arrayBar {
-      background-color: black;
+      background-color: #7209b7;
       border-radius: 5px;
     }
   }
